--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     </main>
     <footer>
       <h2>WEBSTUDIO</h2>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
