--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
-              within the shortest possible time
+              within the shortest possible time.
             </p>
           </li>
           <li>
