--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -118,7 +118,6 @@
       </section>
     </main>
     <footer>
-      <h2>WEBSTUDIO</h2>
       <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
